# school-gradebook-project

./: .gitignore  README.md
gradebook-backend/: .env.example  .gitignore  Cargo.toml
gradebook-backend/migrations/: 20250702190535_init.sql  20250702193310_students.sql  20250702194730_grades.sql  20250702203719_parent_students.sql  20250702204417_absences.sql
gradebook-backend/src/: db.rs  main.rs  main_backup.rs
gradebook-backend/src/models/: absence.rs  grade.rs  mod.rs  parent_student.rs  student.rs  user.rs
gradebook-frontend/: .gitignore  README.md  api_documentaion.txt  index.html  package-lock.json  package.json  project_requirements.txt  tsconfig.json
gradebook-frontend/public/: index.html
gradebook-frontend/src/: App.tsx  main.tsx
gradebook-frontend/src/api/: absences.ts  grades.ts  index.ts  parentStudents.ts  stats.ts  students.ts  users.ts
gradebook-frontend/src/components/Absences/: AbsenceForm.tsx  AbsenceList.tsx
gradebook-frontend/src/components/Auth/: LoginForm.tsx
gradebook-frontend/src/components/Grades/: GradeForm.tsx  GradeList.tsx
gradebook-frontend/src/components/Layout/: HealthCheck.tsx  Navigation.tsx
gradebook-frontend/src/context/: AuthContext.tsx
gradebook-frontend/src/pages/: AbsencesPage.tsx  DashboardPage.tsx  GradesPage.tsx  LoginPage.tsx  NotAuthorizedPage.tsx  NotFoundPage.tsx  ParentStudentLinksPage.tsx  StatsPage.tsx  StudentsPage.tsx  UsersPage.tsx
gradebook-frontend/src/routes/: AppRoutes.tsx  ProtectedRoute.tsx
gradebook-frontend/src/utils/: rbac.ts  studentNames.ts
(+7 files in other folders)
