[package]
name = "gradebook-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON (for request/response)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUIDs for primary keys
uuid = { version = "1", features = ["v4", "serde"] }

# .env support
dotenvy = "0.15"

# SQL database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }

# Error handling
thiserror = "1"

# Authentication (JWTs)
jsonwebtoken = "9"

# Logging (optional but useful)
tracing = "0.1"
tracing-subscriber = "0.3"

# CORS, compression, etc.
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

chrono = { version = "0.4", features = ["serde"] }

